--- a/Project_1_Chart_KS.ipynb
+++ b/Project_1_Chart_KS.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
     "\n",
     "print(f\"The r-value is: {rvalue**2}\")\n",
     "\n",
-    "plt.savefig('DancevRank.png')\n",
+    "plt.savefig('EnergyvRank.png')\n",
     "plt.show()"
    ]
   },
